# zotex

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
scripts/: update-readme.sh
src/: export.rs  file_syncer.rs  main.rs  zotero_client.rs
src/export/: file.rs  mod.rs  trigger.rs  websocket.rs
src/zotero_api/: api_key.rs  builder.rs  client.rs  mod.rs  types.rs
