[package]
name = "zotex"
description = "A command-line tool to export a Zotero library to a file."
repository = "https://github.com/fabiofranke/zotex"
license = "MIT"
version = "0.2.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
