[package]
name = "zotex"
description = "A command-line tool to export a Zotero library to a file."
repository = "https://github.com/fabiofranke/zotex"
license = "MIT"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive", "cargo"] }
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12", features = ["native-tls-vendored", "json"] }
serde = "1.0.221"
serde_json = "1.0.145"
serde_variant = "0.1.3"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
